# game-server

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-build-full.sh  docker-build-inner.sh
.github/workflows/: build.yml
src/: client_data.rs  client_store.rs  config.rs  event.rs  handler.rs  load_calculator.rs  main.rs  oneshot_rate_limiter.rs  player_state.rs  session_manager.rs  trigger_manager.rs  voice_message.rs
src/bridge/: handler.rs  mod.rs  server_role.rs
src/bridge/data/: mod.rs
src/data/: mod.rs
src/events/: ids.rs  in.rs  legacy.rs  mod.rs  out.rs
src/events/events/: mod.rs
src/events/globed/: misc.rs  mod.rs  scripting.rs
src/util/: mod.rs
