[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
capnp = { version = "0.21.2", default-features = false, features = [
    "unaligned",
    "std",
] }
heapless = "0.8.0"
parking_lot = { version = "0.12.4", features = [
    "hardware-lock-elision",
    "send_guard",
] }
rand = "0.9.1"
server-shared = { git = "https://github.com/GlobedGD/server-shared", rev = "a95cb8e", features = [
    "game",
    "srvc",
    "qunet-client",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"], optional = true }
tokio_tracing = { package = "tokio", version = "1.45.1", features = [
    "full",
    "tracing",
], optional = true }
toml = "0.9.2"
tracing = "0.1.41"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
arc-swap = "1.7.1"
dashmap = { version = "6.1.0", features = ["inline"] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
const-default = { version = "1.0.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
mlua = { version = "0.11.1", features = [
    "async",
    "luau-jit",
    "send",
], optional = true }
blake3 = "1.8.2"
nohash-hasher = "0.2.0"
build-time = "0.1.3"
atomic_float = "1.1.0"
time-format = "1.2.2"
mimalloc = { version = "0.1.48", optional = true }

[build-dependencies]
capnpc = "0.21.1"

[features]
all = ["scripting"]
default = ["tokio"]
docker-build = []
docker-alpine-build = ["mimalloc"]

scripting = ["dep:mlua"]
tokio_tracing = ["dep:tokio_tracing", "server-shared/tokio_tracing"]
stat-tracking = []
mimalloc = ["dep:mimalloc"]
