[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

[dependencies]
heapless = "0.9.2"
parking_lot = { version = "0.12.5", features = [
    "hardware-lock-elision",
    "send_guard",
] }
rand = "0.10.0"
server-shared = { git = "https://github.com/GlobedGD/server-shared", rev = "0682316", features = [
    "game",
    "srvc",
    "qunet-client",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"], optional = true }
tokio_tracing = { package = "tokio", version = "1.49.0", features = [
    "full",
    "tracing",
], optional = true }
toml = "1.0.3"
tracing = "0.1.44"
tracing-appender = { version = "0.2.4", features = ["parking_lot"] }
tracing-subscriber = "0.3.22"
anyhow = "1.0.102"
arc-swap = "1.8.2"
dashmap = { version = "6.1.0", features = ["inline", "raw-api"] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
const-default = { version = "1.0.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
mlua = { version = "0.11.6", features = [
    "async",
    "luau-jit",
    "send",
], optional = true }
blake3 = "1.8.3"
nohash-hasher = "0.2.0"
build-time = "0.1.3"
atomic_float = "1.1.0"
time-format = "1.2.2"
mimalloc = { version = "0.1.48", optional = true }
bitpiece = "2.5.0"

[build-dependencies]
capnpc = "0.25.0"

[features]
all = ["scripting"]
default = ["tokio"]
docker-build = []
docker-alpine-build = ["mimalloc"]

scripting = ["dep:mlua"]
tokio_tracing = ["dep:tokio_tracing", "server-shared/tokio_tracing"]
mimalloc = ["dep:mimalloc"]
